[package]
name = "mcl-installer"
version = "1.0.0"
authors = ["PeratX <peratx@itxtech.org>"]
edition = "2018"
build = "build.rs"

[features]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "mcl-installer.exe"
LegalCopyright = "Copyright © 2021-2022 iTX Technologies"
FileDescription = "OpenJDK and Mirai Console Loader bootstrapper."
ProductName = "iTXTech MCL Installer"
ProductVersion = "1.0.0.0"

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"
